# preflight-tools

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: log_14.html  log_14.html.sha256
src/preflight_tools/: __init__.py
src/preflight_tools/a2a/: __init__.py  cli.py
src/preflight_tools/mcp/: __init__.py  checks.py  cli.py  validator.py
tests/: __init__.py  test_cli.py  test_mcp.py
