[tool.poetry]
name = "preflight-tools"
version = "0.1.0"
description = "Reference validators for autonomous systems protocols: MCP, A2A, ACE, OCC/OCS/OCP"
authors = ["Kevin Broderick <kevin@syzygysys.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/syzygysys/preflight-tools"
repository = "https://github.com/syzygysys/preflight-tools"
documentation = "https://github.com/syzygysys/preflight-tools/blob/main/README.md"
keywords = ["mcp", "a2a", "ace", "protocol-validation", "autonomous-agents", "compliance-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
packages = [{include = "preflight_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
rich = "^13.0"
typer = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.0"
ruff = "^0.5.0"
mypy = "^1.10"

[tool.poetry.scripts]
mcp-preflight-check = "preflight_tools.mcp.cli:app"
a2a-preflight-check = "preflight_tools.a2a.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=preflight_tools --cov-report=term-missing"
